--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ccs/estilos_peliculas.css">
+    <link rel="stylesheet" href="../ccs/estilos_peliculas.css">
     <title>Peliculas</title>
 
 </head>
@@ -13,7 +13,7 @@
             <h2>HEADER</h2>
         </header>
         <aside class="sidebar">
-            <img src="imagen/alicia/alicia.jpg" width="95%" height="70%" alt="">
+            <img src="../imagen/alicia/alicia.jpg" width="95%" height="70%" alt="">
         </aside>
         <main class="contenido">
             <h1>Contenido</h1>
