--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -4,35 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../ccs/estilos_peliculas.css">
+    <script src="https://kit.fontawesome.com/7f7fe5557e.js" crossorigin="anonymous"></script>
     <title>Peliculas</title>
 
 </head>
 <body>
     <div class="contenedor">
         <header class="header">
-            <h2>HEADER</h2>
+            <h2>Bibliocinéfilo</h2>
+            <nav class="nave">
+                <ul class="menu" id="menu">
+                    <li class="item">
+                        <a href="../index.html" class="link">Inicio</a>
+                    </li>
+                    <li class="item">
+                        <a href="#" class="link">Libros</a>
+                    </li>
+                     <!-- <li class="item">
+                        <a href="#" class="link">Géneros</a>
+                    </li> -->
+                    <li class="item">
+                        <a href="#" class="link">Búsqueda</a>
+                    </li>
+                    <!--<li class="item">
+                        <a href="#" class="link">Nosotros</a>
+                    </li> -->
+                </ul>
+            </nav> 
+            <li class="user">
+                <i class="fa-solid fa-user " style="color: #56377c;"></i>
+            </li>
+            <div class="hamburger" id="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </header>
         <aside class="sidebar">
-            <img src="../imagen/alicia/alicia.jpg" width="95%" height="70%" alt="">
+            <img class="imagen" src="../img/alicia/alicia2.jpg"  alt="Alicia en el país de las maravillas">
+            <h1>Alicia en el País de las Maravillas</h1>
         </aside>
         <main class="contenido">
-            <h1>Contenido</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eligendi nam iure inventore nihil reiciendis, nulla error reprehenderit repellat eaque ratione quia, odit quasi molestiae doloremque tenetur laborum eum exercitationem <br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime culpa sequi dolores iusto. Doloremque eligendi inventore distinctio, molestiae similique, omnis, provident neque alias reprehenderit eaque nobis earum laboriosam quo deserunt! <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga veritatis excepturi odio ipsa facere inventore quae non itaque dolore fugiat aspernatur veniam, incidunt mollitia iste ipsam corporis doloremque magni eum!</p>
+            <h1>Alicia en el País de las Maravillas</h1>
+            <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
+            <p>Título original: Alice in Wonderland</p>
+            <p>Año: 2010</p>
+            <p>Duración: 108 min.</p> 
+            <p>Genero: Fántastico, Animación, Aventuras.</p>
         </main>
         <div class="trailer">
-            <h3>Trailer</h3>
-        </div>
+            <h3>Ver Pelicula</h3>
+            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/nIz4NipD5Q0?si=MjLb1zpfX2OAcsNd&amp;start=72" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
         <div class="card-1">
-            <h3>CARD 1</h3>
+            <img src="../img/alicia/alicia4.jpg" width="100%" height="auto" alt="">
         </div>
         <div class="card-2">
-            <h3>CARD 2</h3>
+            <img src="../img/leyenda/soy-leyenda.png" width="100%" height="auto" alt="">
         </div>
         <div class="card-3">
-            <h3>CARD 3</h3>
+            <img src="../img/it/it_v.jpg" width="100%" height="auto" alt="">
+        </div>
+        <div class="card-4">
+            <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">        
         </div>
         <footer class="footer">
-            <h3>FOOTER</h3>
+            <div class="redes ">
+                <h4 class="text-white">Contáctanos</h4>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-regular fa-envelope"></i></i> </a>
+            </div>
+        
+            <div class="tecno">
+                <h4 class="text-white ">Tecnologías</h4>
+                <a href="#"> <i class="fa-brands fa-bootstrap"></i></a>
+                <a href="#"><i class="fa-brands fa-css3"></i></a>
+                <a href="#"><i class="fa-brands fa-font-awesome"></i></a>
+                <a href="#"><i class="fa-brands fa-html5"></i></a>
+                <a href="#"><i class="fa-brands fa-js"></i></a>
+            </div>
         </footer>
         
     </div>
