--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
         <div class="pelis">
            <div class="tarjeta">
             <img src="img/alicia/poster-alicia.jpg" alt="Alicia en el Pais de las Maravillas">
-            <a class="link-peliculas" href="pages/peliculas.html">Alice in Wonderland</a>
+            <a class="link-peliculas" href="pages/pelicula_alicia.html">Alice in Wonderland</a>
            </div>
            <div class="tarjeta">
             <img src="img/harry/camara.jpg" alt="Harry Potter La Cámara Secreta">
-            <span>Harry Potter La Cámara Secreta</span>
+            <a class="link-peliculas" href="pages/pelicula_harry.html">Harry Poter</a>
            </div>
            <div class="tarjeta">
             <img src="img/it/it-eso.png" alt="IT (ESO)">
-            <span>IT (ESO)</span>
+            <a class="link-peliculas" href="pages/pelicula_it.html">IT</a>
            </div>
            <div class="tarjeta">
             <img src="img/leyenda/soy-leyenda.png" alt="Soy Leyenda">
-            <span>Soy Leyenda</span>
+            <a class="link-peliculas" href="pages/pelicula_soy_leyenda.html">Soy Leyenda</a>
            </div>
         </div>
 
@@ -142,20 +142,20 @@
 
         <div class="pelis2">
             <div class="tarjeta">
-             <img src="img/arraival/arraival.jpg" alt="La Llegada">
-             <span>La Llegada</span>
+             <img src="img/maze_runner/1.jpg" alt="Maze Runner">
+             <a class="link-peliculas" href="pages/pelicula_maze_runner.html">Maze runner</a>
             </div>
             <div class="tarjeta">
              <img src="img/lord/el señor de los anillos - la comunidad.jpg" alt="La Comunidad del Anillo">
-             <span>La Comunidad del Anillo</span>
+             <a class="link-peliculas" href="pages/pelicula_it.html">La Comunidad del anillo</a>
             </div>
             <div class="tarjeta">
              <img src="img/matilda/matilda1.png" alt="Matilda">
-             <span>Matilda</span>
+             <a class="link-peliculas" href="pages/pelicula_it.html">Matilda</a>
             </div>
             <div class="tarjeta">
              <img src="img/juegos/juegos-del-hambre.png" alt="Juegos del Hambre">
-             <span>Juegos del Hambre</span>
+             <a class="link-peliculas" href="pages/pelicula_it.html">Juegos del hambre</a>
             </div>
          </div>
         <!--? ======================================================================= -->
