--- a/pages/pelicula_harry.html
+++ b/pages/pelicula_harry.html
@@ -8,7 +8,7 @@
     <title>Peliculas</title>
 
 </head>
-<body>
+<body class="bg-harry">
     <div class="contenedor">
         <header class="header">
             <h2>Bibliocinéfilo</h2>
@@ -39,32 +39,37 @@
             </div>
         </header>
         <aside class="sidebar">
-            <img class="imagen" src="../img/alicia/alicia2.jpg"  alt="Alicia en el país de las maravillas">
-            <h1>Alicia en el País de las Maravillas</h1>
+            <img id="slide-harry" class="imagen" src="../img/harry/camara.jpg"  alt="Alicia en el país de las maravillas">
+            <h1>Harry Potter y la Cámara Secreta</h1>
         </aside>
         <main class="contenido">
-            <h1>Alicia en el País de las Maravillas</h1>
-            <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
-            <p>Título original: Alice in Wonderland</p>
-            <p>Año: 2010</p>
-            <p>Duración: 108 min.</p> 
-            <p>Genero: Fántastico, Animación, Aventuras.</p>
+            <h1>Harry Potter y la Cámara Secreta</h1>
+            <p>Cuando las vacaciones en casa de sus tíos comenzaban a ser insoportables, un elfo sorprende a Harry Potter y le informa del peligro que se cierne sobre el Colegio Howarts de Magia. A modo de advertencia, aconseja al joven aprendiz de brujo no regresar a sus cursos de hechicería. 
+                A bordo de un coche volador y acompañado de su amigo Ron, un desafío inminente les aguarda. Una nueva aventura que consagra de forma definitiva el maravilloso mundo de Harry Potter surgido de la poderosa imaginación de J.K. Rowling y que abre de par en par las puertas de la fantasía.</p>
+            <p>Año: 2006</p>
+            <p>Duración: 161 min.</p> 
+            <p>Genero: Fántasía, Misterio, Aventuras.</p>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
-            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/nIz4NipD5Q0?si=MjLb1zpfX2OAcsNd&amp;start=72" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
-        <div class="card-1">
-            <img src="../img/alicia/alicia4.jpg" width="100%" height="auto" alt="">
-        </div>
-        <div class="card-2">
-            <img src="../img/leyenda/soy-leyenda.png" width="100%" height="auto" alt="">
-        </div>
-        <div class="card-3">
-            <img src="../img/it/it_v.jpg" width="100%" height="auto" alt="">
-        </div>
-        <div class="card-4">
-            <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">        
-        </div>
+            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/C8CL5TbiFwY?si=rJwIEPMX6BYhRGkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
+        </div>   
+            <div class="card-1">
+                <img src="../img/alicia/alicia4.jpg" width="100%" height="auto" alt="">
+                <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            </div>
+            <div class="card-2">
+                <img src="../img/leyenda/soy-leyenda.png" width="100%" height="auto" alt="">
+                <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            </div>
+            <div class="card-3">
+                <img src="../img/it/it_v.jpg" width="100%" height="auto" alt="">
+                <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            </div>
+            <div class="card-4">
+                <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">   
+                <a class="boton" href="../pages/pelicula_harry.html">Reproducir</a>
+            </div>
         <footer class="footer">
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
