update all paginas pelis

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            </div>
            <div class="tarjeta">
             <img src="img/leyenda/soy-leyenda.png" alt="Soy Leyenda">
-            <a class="link-peliculas" href="pages/pelicula_soy_leyenda.html">Soy Leyenda</a>
+            <a class="link-peliculas" href="pages/pelicula_leyenda.html">Soy Leyenda</a>
            </div>
         </div>
 
@@ -147,15 +147,15 @@
             </div>
             <div class="tarjeta">
              <img src="img/lord/el señor de los anillos - la comunidad.jpg" alt="La Comunidad del Anillo">
-             <a class="link-peliculas" href="pages/pelicula_it.html">La Comunidad del anillo</a>
+             <a class="link-peliculas" href="pages/pelicula_señor_anillos.html">La Comunidad del anillo</a>
             </div>
             <div class="tarjeta">
              <img src="img/matilda/matilda1.png" alt="Matilda">
-             <a class="link-peliculas" href="pages/pelicula_it.html">Matilda</a>
+             <a class="link-peliculas" href="pages/pelicula_matilda.html">Matilda</a>
             </div>
             <div class="tarjeta">
              <img src="img/juegos/juegos-del-hambre.png" alt="Juegos del Hambre">
-             <a class="link-peliculas" href="pages/pelicula_it.html">Juegos del hambre</a>
+             <a class="link-peliculas" href="pages/pelicula_juegos_hambre.html">Juegos del hambre</a>
             </div>
          </div>
         <!--? ======================================================================= -->
