--- a/pages/pelicula_alicia.html
+++ b/pages/pelicula_alicia.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../ccs/estilos_peliculas.css">
     <script src="https://kit.fontawesome.com/7f7fe5557e.js" crossorigin="anonymous"></script>
-    <title>Peliculas</title>
+    <title>Alicia</title>
 
 </head>
 <body class="bg-alicia">
