--- a/pages/pelicula_harry.html
+++ b/pages/pelicula_harry.html
@@ -67,8 +67,8 @@
                 <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
             </div>
             <div class="card-4">
-                <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">   
-                <a class="boton" href="../pages/pelicula_harry.html">Reproducir</a>
+                <img src="../img/maze_runner/1.jpg" width="100%" height="auto" alt="">   
+                <a class="boton" href="../pages/pelicula_maze_runner.html">Reproducir</a>
             </div>
         <footer class="footer">
             <div class="redes ">
