--- a/pages/pelicula_it.html
+++ b/pages/pelicula_it.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../ccs/estilos_peliculas.css">
     <script src="https://kit.fontawesome.com/7f7fe5557e.js" crossorigin="anonymous"></script>
-    <title>Peliculas</title>
+    <title>IT</title>
 
 </head>
-<body class="bg-alicia">
+<body class="bg-it">
     <div class="contenedor">
         <header class="header">
             <h2>Bibliocinéfilo</h2>
@@ -39,24 +39,24 @@
             </div>
         </header>
         <aside class="sidebar">
-            <img id="slide-alicia" class="imagen" src="../img/alicia/alicia4.jpg"  alt="Alicia en el país de las maravillas">
-            <h1>Alicia en el País de las Maravillas</h1>
+            <img id="slide-it" class="imagen" src="../img/it/it2.jpg"  alt="Alicia en el país de las maravillas">
+            <h1>IT (Eso)</h1>
         </aside>
         <main class="contenido">
-            <h1>Alicia en el País de las Maravillas</h1>
-            <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
-            <p>Título original: Alice in Wonderland</p>
-            <p>Año: 2010</p>
-            <p>Duración: 108 min.</p> 
-            <p>Genero: Fántastico, Animación, Aventuras.</p>
+            <h1>IT (Eso)</h1>
+            <p>Varios niños de una pequeña ciudad del estado de Maine se alían para combatir a una entidad diabólica que adopta la forma de un payaso y desde hace mucho tiempo emerge cada 27 años para saciarse de sangre infantil.</p>
+            <p>Título original: IT</p>
+            <p>Año: 2017</p>
+            <p>Duración: 135 min.</p> 
+            <p>Genero: Terror.</p>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
-            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/nIz4NipD5Q0?si=MjLb1zpfX2OAcsNd&amp;start=72" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
+            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/fP4BBZ76DGg?si=9Izkxeop8y-9aL0C&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
         </div>
         <div class="card-1">
             <img src="../img/alicia/alicia4.jpg" width="100%" height="auto" alt="">
-            <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            <a class="boton" href="../pages/pelicula_alicia.html">Reproducir</a>
 
         </div>
         <div class="card-2">
@@ -64,8 +64,8 @@
             <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
         </div>
         <div class="card-3">
-            <img src="../img/it/it_v.jpg" width="100%" height="auto" alt="">
-            <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            <img src="../img/maze_runner/1.jpg" width="100%" height="auto" alt="">
+            <a class="boton" href="../pages/pelicula_maze_runner.html">Reproducir</a>
         </div>
         <div class="card-4">
             <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">   
