--- a/pages/pelicula_maze_runner.html
+++ b/pages/pelicula_maze_runner.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../ccs/estilos_peliculas.css">
     <script src="https://kit.fontawesome.com/7f7fe5557e.js" crossorigin="anonymous"></script>
-    <title>Peliculas</title>
+    <title>Maze runner</title>
 
 </head>
 <body class="bg-maze-runner">
@@ -40,24 +40,23 @@
         </header>
         <aside class="sidebar">
             <img id="slide-maze-runner" class="imagen" src="../img/maze_runner/2.jpg"  alt="Alicia en el país de las maravillas">
-            <h1>Alicia en el País de las Maravillas</h1>
+            <h1>Maze runner</h1>
         </aside>
         <main class="contenido">
-            <h1>Alicia en el País de las Maravillas</h1>
-            <p>Alicia, una joven de 19 años, acude a una mansión victoriana para asistir a una fiesta de la alta sociedad. Cuando está a punto de recibir públicamente una propuesta de matrimonio, sale corriendo tras un conejo blanco.</p>
-            <p>Título original: Alice in Wonderland</p>
-            <p>Año: 2010</p>
-            <p>Duración: 108 min.</p> 
-            <p>Genero: Fántastico, Animación, Aventuras.</p>
+            <h1>Maze runner</h1>
+            <p>Thomas es un adolescente cuya memoria fue borrada y que ha sido encerrado junto a otros chicos de su edad en un laberinto plagado de monstruos y misterios. Para sobrevivir, tendrá que adaptarse a las normas y a los demás habitantes del laberinto.</p>
+            <p>Título original: Maze runner</p>
+            <p>Año: 2014</p>
+            <p>Duración: 113 min.</p> 
+            <p>Genero: Ciencia Ficción, Suspenso, Acción.</p>
         </main>
         <div class="trailer">
             <h3>Ver Pelicula</h3>
-            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/nIz4NipD5Q0?si=MjLb1zpfX2OAcsNd&amp;start=72" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KNYPRt6SfrE?si=B_3gJFX-OmbMyrXg&amp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        
         </div>
         <div class="card-1">
             <img src="../img/alicia/alicia4.jpg" width="100%" height="auto" alt="">
-            <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
-
+            <a class="boton" href="../pages/pelicula_alicia.html">Reproducir</a>
         </div>
         <div class="card-2">
             <img src="../img/leyenda/soy-leyenda.png" width="100%" height="auto" alt="">
@@ -65,7 +64,7 @@
         </div>
         <div class="card-3">
             <img src="../img/it/it_v.jpg" width="100%" height="auto" alt="">
-            <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
+            <a class="boton" href="../pages/pelicula_it.html">Reproducir</a>
         </div>
         <div class="card-4">
             <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="">   
