lista las pag de escritores.

--- a/pages/escritor_matilda.html
+++ b/pages/escritor_matilda.html
@@ -9,7 +9,7 @@
     <title>Escritores</title>
 </head>
 
-<body class="potter" id="bg-escritor">
+<body class="matilda" id="bg-escritor">
     <div class="contenedor">
         <!--* ======================================================================= -->
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
@@ -48,28 +48,31 @@
         <!--? ========================================================================= -->
 
         <main class="contenido">
-            <h1>J. K. Rowling</h1>
-            <p>Nombre de nacimiento: Joanne Rowling</p>
-            <p>Nacimiento: 31 de julio de 1965 (58 años) Yate (Gloucestershire), Reino Unido</p>
-            <p>Empezó a escribir historias desde los seis años, y su primer cuento se llamó Rabbit2.
-            <p>Se le ocurrió la idea de Harry Potter en un viaje en tren de Manchester a Londres en 1990.</p>
-            <p>Escribió el primer libro de la saga,<span class="link-peli"> <a href="../pages/pelicula_harry.html"> Harry Potter y la piedra filosofal</a></span>
-                , mientras vivía de una pensión como desempleada y madre soltera. Publicó el libro en 1997 con el seudónimo J. K. Rowling, 
-                usando la inicial de su abuela paterna, Kathleen, porque pensaba que los niños no leerían un libro escrito por una mujer.</p>
-            <p class="oculto">Además de Harry Potter, ha escrito otros libros para adultos y niños, como Una vacante imprevista, 
-                El canto del cuco y El Ickabog2. También ha participado como guionista y productora en las películas Animales fantásticos y dónde 
-                encontrarlos y Animales fantásticos: Los crímenes de Grindelwald, basadas en el mundo mágico que creó.</p>
-            <p> Es una activista social y filantrópica, que ha donado dinero y apoyado causas como la lucha contra la pobreza, 
-                la educación, los derechos humanos y la salud mental</p>
+            <h1>Roald Dahl</h1>
+            <p>Nombre de nacimiento: Roald Dahl</p>
+            <p>Nacimiento: 	13 de septiembre de 1916 Llandaff (Gales, Reino Unido)</p>
+            <p>Fue un novelista, cuentista, poeta y guionista británico de ascendencia noruega. Entre sus obras más populares se encuentran
+                 Charlie y la fábrica de chocolate, James y el melocotón gigante, <span class="link-peli"> <a href="../pages/pelicula_matilda.html">Matilda</a></span>, 
+                 El gran gigante bonachón, Agu Trot, Las brujas y Relatos de lo inesperado.</p>
+            <p>Dahl era muy alto, medía cerca de dos metros de altura, pero le gustaba escribir en lugares con poco espacio. Usaba una cabaña en su jardín como
+                su estudio, donde tenía un sillón con orejeras y una tabla de madera como escritorio</p>
+            <p> Dahl tenía una relación especial con el ilustrador Quentin Blake, que dibujó muchos de sus personajes. Dahl le permitía entrar en su cabaña y le 
+                enviaba cartas con sugerencias para las ilustraciones.</p>
+            <p class="oculto">Dahl también fue espía del MI6, el servicio de inteligencia británico, y se codeó con personalidades como Ernest Hemingway, 
+                Ian Fleming y Winston Churchill. Escribió el guion de una película de James Bond: Solo se vive dos veces, basada en la novela de Fleming </p>
+            <p>Dahl era un amante del chocolate y lo comía todos los días. Sin embargo, odiaba el chocolate Cadbury, que era el que recibía cuando era niño en su
+                colegio para probarlo. Esto le dio la idea de crear a Willy Wonka, el dueño de la fábrica de chocolate más maravillosa del mundo </p>
+                <p>Fallecimiento	23 de noviembre de 1990 Ver y modificar los datos en Wikidata (74 años)
+                    Oxford, Inglaterra, Reino Unido</p>
         </main>
 
         <!--* =========================================================== -->
         <!--* ===================== A  S  I  D  E   ===================== -->
         <!--* =========================================================== -->
         <aside class="sidebar">
-            <img id="slide-rowling" class="imagen" src="../img/escritores/j-k-rowling-potter.jpg"
+            <img id="slide-matilda" class="imagen" src="../img/escritores/Roald_Dahl.jpg"
                 alt="J. K. Rowling">
-            <h1>J. K. Rowling</h1>
+            <h1>Roald Dahl</h1>
         </aside>
 
         <!--! ======================================================================= -->
@@ -77,22 +80,20 @@
         <!--! ======================================================================= -->
 
         <div class="card-1">
-            <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="Harry Potter y la Piedra Filosofal">
+            <img src="../img/matilda/matilda1.png" width="100%" height="auto" alt="Matilda">
             <a class="boton" href="../pages/pelicula_harry.html">Reproducir</a>
 
         </div>
         <div class="card-2">
-            <img src="../img/harry/harry-potter-reliquias-2.jpg" width="100%" height="auto" alt="HArry Potter Las Reliquias">
+            <img src="../img/matilda/matilda musical.jpg" width="100%" height="auto" alt="Matilda Musical">
             <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
         </div>
         <div class="card-3">
-            <img src="../img/escritores/libro-harry.jpeg" width="100%" height="auto"
-                alt="Libro Harry Potter y la Piedra Filosofal">
-            <a class="boton" href="#">Leer</a>
+            <img src="../img/escritores/libro-matilda-1.webp" width="100%" height="auto" alt="Libro Matilda">
+            <a class="boton" href="#">leer</a>
         </div>
         <div class="card-4">
-            <img src="../img/escritores/libro-Potter_y_el_Misterio_del_Príncipe_Portada_Español.PNG.png" width="100%" height="auto"
-                alt="Libro Harry Potter Misterio del Principe">
+            <img src="../img/escritores/matilda-edicion-ilustrada.jpg" width="100%" height="auto" alt="Libro Fabrica de chocolates">
             <a class="boton" href="#">Leer</a>
 
             <!--? ========================================================================= -->
