--- a/pages/escritor_alicia.html
+++ b/pages/escritor_alicia.html
@@ -9,7 +9,7 @@
     <title>Escritores</title>
 </head>
 
-<body class="bg-escritor-alicia">
+<body class="alicia" id="bg-escritor">
     <div class="contenedor">
         <!--* ======================================================================= -->
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
