--- a/pages/escritor_juegos_del_hambre.html
+++ b/pages/escritor_juegos_del_hambre.html
@@ -9,7 +9,7 @@
     <title>Escritores</title>
 </head>
 
-<body class="potter" id="bg-escritor">
+<body class="juegos" id="bg-escritor">
     <div class="contenedor">
         <!--* ======================================================================= -->
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
@@ -48,28 +48,28 @@
         <!--? ========================================================================= -->
 
         <main class="contenido">
-            <h1>J. K. Rowling</h1>
-            <p>Nombre de nacimiento: Joanne Rowling</p>
-            <p>Nacimiento: 31 de julio de 1965 (58 años) Yate (Gloucestershire), Reino Unido</p>
-            <p>Empezó a escribir historias desde los seis años, y su primer cuento se llamó Rabbit2.
-            <p>Se le ocurrió la idea de Harry Potter en un viaje en tren de Manchester a Londres en 1990.</p>
-            <p>Escribió el primer libro de la saga,<span class="link-peli"> <a href="../pages/pelicula_harry.html"> Harry Potter y la piedra filosofal</a></span>
-                , mientras vivía de una pensión como desempleada y madre soltera. Publicó el libro en 1997 con el seudónimo J. K. Rowling, 
-                usando la inicial de su abuela paterna, Kathleen, porque pensaba que los niños no leerían un libro escrito por una mujer.</p>
-            <p class="oculto">Además de Harry Potter, ha escrito otros libros para adultos y niños, como Una vacante imprevista, 
-                El canto del cuco y El Ickabog2. También ha participado como guionista y productora en las películas Animales fantásticos y dónde 
-                encontrarlos y Animales fantásticos: Los crímenes de Grindelwald, basadas en el mundo mágico que creó.</p>
-            <p> Es una activista social y filantrópica, que ha donado dinero y apoyado causas como la lucha contra la pobreza, 
-                la educación, los derechos humanos y la salud mental</p>
+            <h1>Suzanne Collins</h1>
+            <p>Nombre de nacimiento: Suzanne Collins</p>
+            <p>Nacimiento: 	10 de agosto de 1962 (61 años), Hartford, Connecticut</p>
+            <p>La carrera de Suzanne empezó en 1991 como guionista en programas de televisión para niños trabajando para canales como Nickelodeon. 
+                Mientras trabajaba en el programa Generation O! de Kid's WBOOK, conoció al escritor de libros para niños James Plumiew quien la
+                inspiró a escribir libros infantiles por su cuenta.</p>
+            <p>En 2008 publicó la novela por la que sería famosa, <span class="link-peli"> <a href="../pages/pelicula_juegos_hambre.html">Los juegos del hambre.</a></span> </p>
+            <p><span class="link-peli"> <a href="../pages/pelicula_juegos_hambre.html">Los juegos del hambre.</a></span> ha permanecido más de seis años hasta la fecha en la lista de los más vendidos de The New York Times desde su publicación en septiembre 
+                de 2008, </p>
+            <p class="oculto">En 2016 recibió el Premio del Gremio de Autores por su distinguido servicio a la comunidad literaria por ejemplificar el poder único de la literatura
+                 juvenil para cambiar vidas y crear amantes de los libros de por vida.</p>
+            <p> La idea de Los Juegos del Hambre le surgió al ver un programa de televisión sobre la guerra de Irak y otro sobre los reality shows.
+                También se inspiró en el mito griego del Minotauro para crear el argumento principal de Los Juegos del Hambre.</p>
         </main>
 
         <!--* =========================================================== -->
         <!--* ===================== A  S  I  D  E   ===================== -->
         <!--* =========================================================== -->
         <aside class="sidebar">
-            <img id="slide-rowling" class="imagen" src="../img/escritores/j-k-rowling-potter.jpg"
+            <img id="slide-collins" class="imagen" src="../img/escritores/suzanne_collin2.jpg"
                 alt="J. K. Rowling">
-            <h1>J. K. Rowling</h1>
+            <h1>Suzanne Collins</h1>
         </aside>
 
         <!--! ======================================================================= -->
@@ -77,21 +77,21 @@
         <!--! ======================================================================= -->
 
         <div class="card-1">
-            <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="Harry Potter y la Piedra Filosofal">
+            <img src="../img/escritores/juegos-en-llamas-2.jpg" width="100%" height="auto" alt="Juegos del hambre 1">
             <a class="boton" href="../pages/pelicula_harry.html">Reproducir</a>
 
         </div>
         <div class="card-2">
-            <img src="../img/harry/harry-potter-reliquias-2.jpg" width="100%" height="auto" alt="HArry Potter Las Reliquias">
+            <img src="../img/escritores/sinsajo_1.jpg" width="100%" height="auto" alt="Juegos del hambre 2">
             <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
         </div>
         <div class="card-3">
-            <img src="../img/escritores/libro-harry.jpeg" width="100%" height="auto"
-                alt="Libro Harry Potter y la Piedra Filosofal">
-            <a class="boton" href="#">Leer</a>
+            <img src="../img/escritores/sinsajo_2.jpg" width="100%" height="auto"
+                alt="Juegos del hambre 3">
+            <a class="boton" href="#">Reproducir</a>
         </div>
         <div class="card-4">
-            <img src="../img/escritores/libro-Potter_y_el_Misterio_del_Príncipe_Portada_Español.PNG.png" width="100%" height="auto"
+            <img src="../img/juegos/portada-juegos-1.jpg" width="100%" height="auto"
                 alt="Libro Harry Potter Misterio del Principe">
             <a class="boton" href="#">Leer</a>
 
