--- a/pages/escritor_señor_anillos.html
+++ b/pages/escritor_señor_anillos.html
@@ -9,7 +9,7 @@
     <title>Escritores</title>
 </head>
 
-<body class="potter" id="bg-escritor">
+<body class="anillos" id="bg-escritor">
     <div class="contenedor">
         <!--* ======================================================================= -->
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
@@ -48,28 +48,30 @@
         <!--? ========================================================================= -->
 
         <main class="contenido">
-            <h1>J. K. Rowling</h1>
-            <p>Nombre de nacimiento: Joanne Rowling</p>
-            <p>Nacimiento: 31 de julio de 1965 (58 años) Yate (Gloucestershire), Reino Unido</p>
-            <p>Empezó a escribir historias desde los seis años, y su primer cuento se llamó Rabbit2.
-            <p>Se le ocurrió la idea de Harry Potter en un viaje en tren de Manchester a Londres en 1990.</p>
-            <p>Escribió el primer libro de la saga,<span class="link-peli"> <a href="../pages/pelicula_harry.html"> Harry Potter y la piedra filosofal</a></span>
-                , mientras vivía de una pensión como desempleada y madre soltera. Publicó el libro en 1997 con el seudónimo J. K. Rowling, 
-                usando la inicial de su abuela paterna, Kathleen, porque pensaba que los niños no leerían un libro escrito por una mujer.</p>
-            <p class="oculto">Además de Harry Potter, ha escrito otros libros para adultos y niños, como Una vacante imprevista, 
-                El canto del cuco y El Ickabog2. También ha participado como guionista y productora en las películas Animales fantásticos y dónde 
-                encontrarlos y Animales fantásticos: Los crímenes de Grindelwald, basadas en el mundo mágico que creó.</p>
-            <p> Es una activista social y filantrópica, que ha donado dinero y apoyado causas como la lucha contra la pobreza, 
-                la educación, los derechos humanos y la salud mental</p>
+            <h1>J. R. R. Tolkien</h1>
+            <p>Nombre de nacimiento: John Ronald Reuel Tolkien</p>
+            <p>Nacimiento: 	3 de enero de 1892 Bloemfontein,  Estado Libre de Orange (actual Sudáfrica)</p>
+            <p>J. R. R. Tolkien fue un escritor, poeta, filólogo, lingüista y profesor universitario británico,
+                conocido principalmente por ser el autor de las novelas clásicas de fantasía heroica El hobbit,
+                 El Silmarillion y <span class="link-peli"> <a href="../pages/pelicula_señor_anillos">El Señor de los Anillos.</a></span> 
+                Su obra ha tenido una gran influencia en la cultura popular y ha sido adaptada al cine, la televisión, los videojuegos 
+                y otros medios.</p>
+            <p>Se casó con Edith, su único amor, y tuvieron cuatro hijos. En sus tumbas se pueden ver los nombres de Beren y Luthien, 
+                personajes de El Silmarillion que se inspiraron en su relación.</p>
+            <p>Era amigo de C.S. Lewis, otro famoso escritor de fantasía y autor de Las crónicas de Narnia. Ambos formaban parte del 
+                Club Inklings, un grupo de escritores que se reunían para compartir y discutir sus obras.</p>
+            <p class="oculto">La historia de El Hobbit comenzó como unos cuentos que Tolkien narraba a sus hijos antes de dormir. 
+                Uno de ellos encontró un manuscrito incompleto y le animó a terminarlo.</p>
+            <p>Fallecimiento	2 de septiembre de 1973 (81 años) Bournemouth, Inglaterra, Bandera del Reino Unido Reino Unido.</p>
         </main>
 
         <!--* =========================================================== -->
         <!--* ===================== A  S  I  D  E   ===================== -->
         <!--* =========================================================== -->
         <aside class="sidebar">
-            <img id="slide-rowling" class="imagen" src="../img/escritores/j-k-rowling-potter.jpg"
+            <img id="slide-tolkien" class="imagen" src="../img/escritores/tolkien.jpg"
                 alt="J. K. Rowling">
-            <h1>J. K. Rowling</h1>
+            <h1>J. R. R. Tolkien</h1>
         </aside>
 
         <!--! ======================================================================= -->
@@ -77,21 +79,20 @@
         <!--! ======================================================================= -->
 
         <div class="card-1">
-            <img src="../img/harry/harry 1.jpg" width="100%" height="auto" alt="Harry Potter y la Piedra Filosofal">
+            <img src="../img/lord/el señor de los anillos - la comunidad.jpg" width="100%" height="auto" alt="El señor de los anillos">
             <a class="boton" href="../pages/pelicula_harry.html">Reproducir</a>
 
         </div>
         <div class="card-2">
-            <img src="../img/harry/harry-potter-reliquias-2.jpg" width="100%" height="auto" alt="HArry Potter Las Reliquias">
+            <img src="../img/lord/el señor de los anllos - el retorno.jpg" width="100%" height="auto" alt="El señor de los anillos">
             <a class="boton" href="../pages/pelicula_leyenda.html">Reproducir</a>
         </div>
         <div class="card-3">
-            <img src="../img/escritores/libro-harry.jpeg" width="100%" height="auto"
-                alt="Libro Harry Potter y la Piedra Filosofal">
-            <a class="boton" href="#">Leer</a>
+            <img src="../img/escritores/anillos-la-comunidad.jpg" width="100%" height="auto" alt="El señor de los anillos">
+            <a class="boton" href="#">Reproducir</a>
         </div>
         <div class="card-4">
-            <img src="../img/escritores/libro-Potter_y_el_Misterio_del_Príncipe_Portada_Español.PNG.png" width="100%" height="auto"
+            <img src="../img/escritores/B0064SV09M_c376c295_cover.jpeg" width="100%" height="auto"
                 alt="Libro Harry Potter Misterio del Principe">
             <a class="boton" href="#">Leer</a>
 
