Consumo de Api + Pag de contactos

--- a/pages/pelicula_juegos_hambre.html
+++ b/pages/pelicula_juegos_hambre.html
@@ -32,7 +32,7 @@
                 </ul>
             </nav> 
             <li class="user">
-                <i class="fa-solid fa-user " style="color: #56377c;"></i>
+                <i class="fa-solid fa-user " style="color: #ffffff;"></i>
             </li>
             <div class="hamburger" id="hamburger">
                 <i class="fa-solid fa-bars"></i>
@@ -74,18 +74,18 @@
         <footer class="footer">
             <div class="redes ">
                 <h4 class="text-white">Contáctanos</h4>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-regular fa-envelope"></i></i> </a>
+                <a href="#"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-regular fa-envelope" style="color: #ffffff;"></i></i> </a>
             </div>
         
             <div class="tecno">
                 <h4 class="text-white ">Tecnologías</h4>
-                <a href="#"> <i class="fa-brands fa-bootstrap"></i></a>
-                <a href="#"><i class="fa-brands fa-css3"></i></a>
-                <a href="#"><i class="fa-brands fa-font-awesome"></i></a>
-                <a href="#"><i class="fa-brands fa-html5"></i></a>
-                <a href="#"><i class="fa-brands fa-js"></i></a>
+                <a href="#"> <i class="fa-brands fa-bootstrap" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-css3" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-font-awesome" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-html5" style="color: #ffffff;"></i></a>
+                <a href="#"><i class="fa-brands fa-js" style="color: #ffffff;"></i></a>
             </div>
         </footer>
         
