--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--* =====================M E N U  -  R E S P O S I V E===================== -->
         <!--* ======================================================================= -->
         <header  class="header">
-            <h2>Bibliocinéfilo</h2>
+            <h2 id="title">Bibliocinéfilo</h2>
             <nav class="nave">
                 <ul class="menu" id="menu">
                     <li class="item">
@@ -42,6 +42,10 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </header>
+        <div id="popup" class="hidden">
+            <p class="description">"Explora el mundo mágico del cine a través de las páginas de la literatura"</p>
+            <img src="img/popup.jpg" alt="Descripción de la imagen">
+        </div>
         
         
         <!--? ======================================================================= -->
@@ -178,6 +182,8 @@
                 <a href="#"><i class="fa-brands fa-js"></i></a>
             </div>
         </div>
+        <!-- BOTÓN SCROLL -->
+        <button id="scrollToTopBtn" title="Ir arriba"></button>
         </div>
     </div>
     <script src="js/javaScript.js"></script>
