actualización pelicula it

--- a/pages/pelicula_it.html
+++ b/pages/pelicula_it.html
@@ -49,7 +49,7 @@
             <p>Título original: IT</p>
             <p>Año: 2017</p>
             <p>Duración: 135 min.</p> 
-            <p>Genero: Terror.</p>
+            <p>Genero: Terror</p>
             <a class="boton-escritor" href="../pages/escritor_it.html">Ver más</a>
         </main>
         <div class="trailer">
